iptables-restore-file
# Orjinali 10.0.2.22:/root/iptables-server-restorefile 'dedir.
# Generated by me Gokhan on somewhere at middle of the night

*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]

-N LOGGING

# ssh configurasyon icin sadece vm-netsecp-sshmid e izin vermeli

-A INPUT -i enp0s3 -p tcp -s 10.0.2.24 -d 10.0.2.22 --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT

-A OUTPUT -o enp0s3 -p tcp -d 10.0.2.24 -s 10.0.2.22 --sport 22 -m conntrack --ctstate ESTABLISHED -j ACCEPT

# Burasi web server kismi icin, established eski baglantilar icin,
# new yeni baglantilari gibi

-A INPUT -i enp0s3 -p tcp --dport 80 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -o enp0s3 -p tcp --sport 80 -m conntrack --ctstate ESTABLISHED -j ACCEPT 
-A INPUT -i enp0s3 -p tcp --dport 443 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o enp0s3 -p tcp --sport 443 -m conntrack --ctstate ESTABLISHED -j ACCEPT

# Eski established butun tcp udp baglantilari icin

#-A INPUT -i enp0s3 -p tcp -m tcp -m conntrack --ctstate ESTABLISHED -j ACCEPT
#-A INPUT -i enp0s3 -p udp -m udp -m conntrack --ctstate ESTABLISHED -j ACCEPT

# Basit bir HTTPS icin loadbalance ornegi, PREROUTING ile yapiliyor

#-A PREROUTING -i enp0s3 -p tcp --dport 443 -m conntrack --ctstate NEW -m nth --counter 0 --counter 0 --every 3 --packet 0 -j DNAT --to-destination SERVER1IP:443
#-A PREROUTING -i enp0s3 -p tcp --dport 443 -m conntrack --ctstate NEW -m nth --counter 0 --counter 0 --every 3 --packet 0 -j DNAT --to-destination SERVER2IP:443
#-A PREROUTING -i enp0s3 -p tcp --dport 443 -m conntrack --ctstate NEW -m nth --counter 0 --counter 0 --every 3 --packet 0 -j DNAT --to-destination SERVER3IP:443


# Pingleri acceptle

-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT

#pingleri allowlamak icin soyle bir yontem daha var
#inside to outside
#-A INPUT -p icmp --icmp-type echo-reply -j ACCEPT
#-A OUTPUT -p icmp --icmp-type echo-request -j ACCEPT
#ouside to inside
#-A INPUT -p icmp --icmp-type echo-request -j ACCEPT
#-A OUTPUT -p --icmp-type echo-reply -j ACCEPT


# loopback localhostu acceptle

-A INPUT -i lo -j ACCEPT

# 443 ve 80 balglantilarinda ddos onleyici

-A INPUT -p tcp -m tcp --dport 80 -m limit --limit 50/min --limit-burst 100 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -m limit --limit 50/min --limit-burst 100 -j ACCEPT

# SSL ISINI YAPAMAZSAM 443 PORTUNU 80E YONLENDIRME ISI
#-t nat -A PREROUTING -p tcp -d SERVERIP --dport 443 -j DNAT --to SERVERIP:80
#-A INPUT -i enp0s3 -p --dport 443 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
#-A OUTPUT -o enp0s3 -p tcp --sport 443 -m conntrack --ctstate ESTABLISHED -j ACCEPT

# loglama isi, INPUTtan ustteki kurallara girmeyenler icin oldugundan en altta
# yer aliyor. 

-A INPUT -j LOGGING
-A LOGGING -m limit --limit 1/min -j LOG --log-prefix "GOKHAN DROPPED THIS PACKET: " --log-level 4
-A LOGGING -j DROP

COMMIT
